@@ -9,6 +9,7 @@ Currently the plugin supports the following constraints:
   NOT NULL is converted to validates_presence_of (including belongs_to associations)
   Numbers are checked using validates_numericality_of (including :integer => true)
   String lengths are checked using validates_length_of
+  Single-column unique indexes are converted to validates_uniqueness_of
 
 lICENSE
 =======
