@@ -10,13 +10,17 @@ module RedHillConsulting
 
       def belongs_to_with_schema_validations(association_id, options = {})
         belongs_to_without_schema_validations(association_id, options)
-        validates_presence_of association_id unless columns_hash[reflections[association_id.to_sym].primary_key_name.to_s].null
+        # validates_presence_of association_id unless columns_hash[reflections[association_id.to_sym].primary_key_name.to_s].null
       end
 
       def inherited(child)
         super
+        
+        # NOT NULL constraints
         child.content_columns.reject { |column| column.name =~ /(_at|_on)$/ }.each do |column|
-          if column.type == :integer
+          if column.name == "position"
+            next
+          elsif column.type == :integer
             child.validates_numericality_of column.name, :allow_nil => true, :only_integer => true
           elsif column.number?
             child.validates_numericality_of column.name, :allow_nil => true
@@ -28,11 +32,16 @@ module RedHillConsulting
             # Work-around for a "feature" of the way validates_presence_of handles boolean fields
             # See http://dev.rubyonrails.org/ticket/5090 and http://dev.rubyonrails.org/ticket/3334
             if column.type == :boolean
-              child.validates_inclusion_of column.name, :in => [true, false]
+              child.validates_inclusion_of column.name, :in => [true, false], :message => ActiveRecord::Errors.default_error_messages[:blank]
             else
               child.validates_presence_of column.name
             end
           end
+        end
+        
+        # Single-column UNIQUE indexes
+        child.connection.indexes(child.table_name, "#{child.name} Indexes").each do |index|
+          child.validates_uniqueness_of index.columns.first if index.unique && index.columns.size == 1
         end
       end
     end
